<resources>
    <string name="app_name">CardioApp</string>

    <!--Log in -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="activity_login">activity_login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password1">Password1</string>
    <string name="action_sign_in">Confirmar</string>
    <string name="action_sign_up">Regístrate</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--Sign in - Registro -->
    <string name="signup_pass1">pass1</string>
    <string name="signup_pass2">pass2</string>
    <string name="dni_signin">DNI</string>
    <string name="anionacimiento_signin">Año de nacimiento</string>
    <string name="centromedico_signin">Centro médico</string>
    <string name="enviar_mail">Enviar email</string>

    <!--Sign in - Registro -->
    <string name="codigo_registro">Añade aquí el código</string>

    <!--Medico - Pantalla principal -->
    <string name="principal">Principal</string>
    <string name="menu">Menú</string>
    <string name="menu_bottom">Ayuda</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="notificaciones_sin_revisar">Notificaciones sin revisar</string>
    <string name="nuevos_pacientes">Nuevos pacientes</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="alertas">Alertas</string>
    <string name="estad_stica_de_pacientes_por_encima_de_punto_cr_tico">Estadística de pacientes por encima de punto crítico</string>
    <string name="n_total_de_pacientes">Nº total de pacientes</string>
    <string name="pacientes_punto_critico">Estadistica de pacientes por encima de punto crítico</string>

    <!--PopUp - Pantalla principal -->
    <string name="mensaje_popup">¿Seguro que quieres cerrar sesión?</string>
    <string name="titulo_popup">Atención</string>
    <string name="si_popup">Sí</string>
    <string name="no_popup">No</string>
    <string name="mensaje_popup_usuariocreado">Añade el código que has recibio por email</string>
    <string name="titulo_popup_usuariocreado">¡Usuario creado correctamente!</string>
    <string name="ok_popup_usuariocreado">Ok</string>



    <!--Menu - Medico -->
    <string name="Pacientes">Pacientes</string>
    <string name="Principal">Principal</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="Configuracion">Configuracion</string>
    <string name="Medico">Medico</string>
    <string name="maria_del_pozo_gomez">Maria del Pozo Gomez</string>
    <string name="Alertas">Alertas</string>
    <string name="search">Search</string>
    <string name="lista_de_pacientes">Lista de Pacientes</string>
    <string name="cardioapp">CardioApp</string>
    <string name="busqueda">Búsqueda</string>
    <string name="Paciente">Paciente</string>
    <string name="descripcion">Descripción</string>
    <string name="action_sign_in_short">Sign in</string>

    <!--Pantalla AYUDA-->
    <string name="title_activity_ayuda">AyudaActivity</string>
    <string name="ajustes_accion">Ajustes</string>

    <!--Pantalla CONFIG-->
    <string name="title_activity_config">ConfigActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!--Paciente - Vista Médico -->
    <string name="volver">Volver</string>
    <string name="desplegar">Desplegar</string>
</resources>