<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerlayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ListaPacientes">


  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/menu_top"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="7dp"
        android:fontFamily="monospace"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/lista_de_pacientes"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_title_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnsearch"
        app:layout_constraintStart_toEndOf="@+id/btnmenu2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <ImageButton
        android:id="@+id/btnmenu2"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/menu"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:srcCompat="@drawable/baseline_menu_black_36"
        app:tint="@color/browser_actions_title_color" />

    <ImageButton
        android:id="@+id/btnsearch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/actualizar"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/ic_search"
        app:tint="@color/browser_actions_title_color" />


    <ListView
        android:layout_width="414dp"
        android:layout_height="641dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <com.google.android.material.navigation.NavigationView
      android:id="@+id/menu"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:layout_gravity="start"
      app:menu="@menu/menu_lateral"
      app:headerLayout="@layout/cabecera_menu_lateral">
  </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
