<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity"
    >

    <ImageButton
        android:id="@+id/btnmenu"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/menu"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/contenedor1"
        app:layout_constraintEnd_toStartOf="@+id/btnrefresh"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_menu_black_36"
        app:tint="@color/browser_actions_title_color" />

    <ImageButton
        android:id="@+id/btnrefresh"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/actualizar"
        app:layout_constraintBottom_toTopOf="@+id/contenedor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_autorenew_black_36"
        app:tint="@color/browser_actions_title_color" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="116dp"
        android:layout_height="32dp"
        android:layout_marginTop="17dp"
        android:fontFamily="monospace"
        android:text="@string/principal"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_title_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnrefresh"
        app:layout_constraintStart_toEndOf="@+id/btnmenu"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/contenedor1"
        android:layout_width="193dp"
        android:layout_height="289dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/contenedor_redondeado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/contenedor3"
        android:layout_width="193dp"
        android:layout_height="177dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/contenedor_redondeado"
        app:layout_constraintBottom_toTopOf="@+id/contenedor5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/contenedor5"
        android:layout_width="393dp"
        android:layout_height="181dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/contenedor_redondeado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/contenedor2"
        android:layout_width="193dp"
        android:layout_height="289dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/contenedor_redondeado"
        app:layout_constraintBottom_toTopOf="@+id/contenedor4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/contenedor1"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/contenedor4"
        android:layout_width="193dp"
        android:layout_height="177dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/contenedor_redondeado"
        app:layout_constraintBottom_toTopOf="@+id/contenedor5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contenedor3"
        app:layout_constraintTop_toBottomOf="@+id/contenedor2" />

</androidx.constraintlayout.widget.ConstraintLayout>